@@ -10,10 +10,63 @@
 
 #include <svg-cairo.h>
 #include <ruby.h>
+#include <rubyio.h>
 #include "rb_cairo.h"
 
-VALUE rb_mSVG_Cairo;
-VALUE rb_cSVG_Cairo_Context;
+static VALUE rb_mSVG_Cairo;
+static VALUE rb_cSVG_Cairo_Context;
+
+static VALUE rb_eSVG_Cairo_FileNotFound;
+static VALUE rb_eSVG_Cairo_InvalidValue;
+static VALUE rb_eSVG_Cairo_InvalidCall;
+static VALUE rb_eSVG_Cairo_ParseError;
+
+static void
+check_status (svg_cairo_status_t  status)
+{
+  switch (status)
+    {
+    case SVG_CAIRO_STATUS_SUCCESS:
+      /* no exception */
+      break;
+    case SVG_CAIRO_STATUS_NO_MEMORY:
+      rb_raise (rb_eNoMemError, "svgcairo out of memory");
+      break;
+    case SVG_CAIRO_STATUS_IO_ERROR:
+      rb_raise (rb_eIOError, "svgcairo IO error");
+      break;
+    case SVG_CAIRO_STATUS_FILE_NOT_FOUND:
+      rb_raise (rb_eSVG_Cairo_FileNotFound, "svgcairo file not found");
+      break;
+    case SVG_CAIRO_STATUS_INVALID_VALUE:
+      rb_raise (rb_eSVG_Cairo_InvalidValue, "svgcairo invalid value");
+      break;
+    case SVG_CAIRO_STATUS_INVALID_CALL:
+      rb_raise (rb_eSVG_Cairo_InvalidCall, "svgcairo invalid call");
+      break;
+    case SVG_CAIRO_STATUS_PARSE_ERROR:
+      rb_raise (rb_eSVG_Cairo_ParseError, "svgcairo parse error");
+      break;
+    }
+   
+}
+
+void
+Init_svgcairo_exception (void)
+{
+  rb_eSVG_Cairo_FileNotFound=
+    rb_define_class_under (rb_mSVG_Cairo, "FileNotFound",
+     rb_eRuntimeError);
+  rb_eSVG_Cairo_InvalidValue=
+    rb_define_class_under (rb_mSVG_Cairo, "InvalidValue",
+     rb_eRuntimeError);
+  rb_eSVG_Cairo_InvalidCall=
+    rb_define_class_under (rb_mSVG_Cairo, "InvalidCall",
+     rb_eRuntimeError);
+  rb_eSVG_Cairo_ParseError=
+    rb_define_class_under (rb_mSVG_Cairo, "ParseError",
+     rb_eRuntimeError);
+}
 
 #define _SELF  ((svg_cairo_t *)DATA_PTR(self))
 
@@ -23,7 +76,7 @@ rb_v_to_svg_cairo_t (VALUE value)
   svg_cairo_t *xform;
   if (CLASS_OF (value) != rb_cSVG_Cairo_Context)
     {
-      rb_raise (rb_eTypeError, "not a cairo glyph");
+      rb_raise (rb_eTypeError, "not a svgcairo context");
     }
   Data_Get_Struct (value, svg_cairo_t, xform);
   return xform;
@@ -51,7 +104,17 @@ rb_svgcairo_context_new (VALUE klass)
 static    VALUE
 rb_svgcairo_context_parse (VALUE self, VALUE filename_v)
 {
-  svg_cairo_parse (_SELF, STR2CSTR (filename_v));
+  check_status (svg_cairo_parse (_SELF, STR2CSTR (filename_v)));
+  return self;
+}
+
+static    VALUE
+rb_svgcairo_context_parse_file (VALUE self, VALUE port)
+{
+  Check_Type (port, T_FILE);
+  rb_io_check_readable (RFILE (port)->fptr);
+  
+  check_status (svg_cairo_parse_file (_SELF, GetReadFile (RFILE (port)->fptr)));
   return self;
 }
 
@@ -59,14 +122,14 @@ static    VALUE
 rb_svgcairo_context_parse_buffer (VALUE self, VALUE buffer_v)
 {
   int len = strlen (STR2CSTR (buffer_v));
-  svg_cairo_parse_buffer (_SELF, STR2CSTR (buffer_v), len);
+  check_status (svg_cairo_parse_buffer (_SELF, STR2CSTR (buffer_v), len));
   return self;
 }
 
 static    VALUE
 rb_svgcairo_context_render (VALUE self, VALUE cairo_context_v)
 {
-  svg_cairo_render (_SELF, rb_v_to_cairo_t (cairo_context_v));
+  check_status (svg_cairo_render (_SELF, rb_v_to_cairo_t (cairo_context_v)));
   return self;
 }
 
@@ -93,8 +156,10 @@ Init_svgcairo_context (void)
      rb_define_class_under (rb_mSVG_Cairo, "Context", rb_cObject);
   rb_define_singleton_method (rb_cSVG_Cairo_Context, "new",
                               RUBY_METHOD_FUNC (rb_svgcairo_context_new), 0);
-  rb_define_method (rb_cSVG_Cairo_Context, "parse_file",
+  rb_define_method (rb_cSVG_Cairo_Context, "parse",
                     RUBY_METHOD_FUNC (rb_svgcairo_context_parse), 1);
+  rb_define_method (rb_cSVG_Cairo_Context, "parse_file",
+                    RUBY_METHOD_FUNC (rb_svgcairo_context_parse_file), 1);
   rb_define_method (rb_cSVG_Cairo_Context, "parse_string",
                     RUBY_METHOD_FUNC (rb_svgcairo_context_parse_buffer), 1);
   rb_define_method (rb_cSVG_Cairo_Context, "render",
@@ -111,4 +176,5 @@ Init_svgcairo ()
   rb_mSVG_Cairo = rb_define_module ("SVG_Cairo");
 
   Init_svgcairo_context ();
+  Init_svgcairo_exception ();
 }
